crates/forex-bindings/build_log_3.txt
warning: function `detect_divergence` is never used
   --> crates\forex-data\src\lib.rs:392:8
    |
392 | pub fn detect_divergence(price: &[f64], indicator: &[f64], window: usize) -> Vec<f64> {
    |        ^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Ix1` and `Ix2`
 --> crates\forex-bindings\src\utils.rs:1:23
  |
1 | use ndarray::{Array2, Ix1, Ix2};
  |                       ^^^  ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `PyReadonlyArrayDyn`
 --> crates\forex-bindings\src\utils.rs:2:72
  |
2 | use numpy::{IntoPyArray, PyArray2, PyReadonlyArray1, PyReadonlyArray2, PyReadonlyArrayDyn};
  |                                                                        ^^^^^^^^^^^^^^^^^^

warning: unused imports: `PyAny` and `PyDict`
 --> crates\forex-bindings\src\utils.rs:6:19
  |
6 | use pyo3::types::{PyAny, PyDict};
  |                   ^^^^^  ^^^^^^

warning: unused imports: `PyArray2` and `PyReadonlyArray2`
 --> crates\forex-bindings\src\inference.rs:3:13
  |
3 | use numpy::{PyArray2, PyReadonlyArray2};
  |             ^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `pyo3::prelude::*`
 --> crates\forex-bindings\src\inference.rs:4:5
  |
4 | use pyo3::prelude::*;
  |     ^^^^^^^^^^^^^^^^

warning: unused imports: `Arc` and `Mutex`
 --> crates\forex-bindings\src\inference.rs:5:17
  |
5 | use std::sync::{Arc, Mutex};
  |                 ^^^  ^^^^^

warning: unused import: `ndarray::Array2`
 --> crates\forex-bindings\src\inference.rs:6:5
  |
6 | use ndarray::Array2;
  |     ^^^^^^^^^^^^^^^

warning: unused imports: `Ix1` and `Ix2`
 --> crates\forex-bindings\src\models.rs:1:23
  |
1 | use ndarray::{Array2, Ix1, Ix2};
  |                       ^^^  ^^^

warning: unused import: `PyArray1`
 --> crates\forex-bindings\src\models.rs:2:26
  |
2 | use numpy::{IntoPyArray, PyArray1, PyArray2, PyReadonlyArray1, PyReadonlyArray2};
  |                          ^^^^^^^^

warning: unused imports: `PyAny` and `PyDict`
 --> crates\forex-bindings\src\models.rs:4:19
  |
4 | use pyo3::types::{PyAny, PyDict};
  |                   ^^^^^  ^^^^^^

warning: unused import: `std::collections::HashMap`
 --> crates\forex-bindings\src\models.rs:5:5
  |
5 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Mutex`
 --> crates\forex-bindings\src\data.rs:6:5
  |
6 | use std::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `Axis`
 --> crates\forex-bindings\src\data.rs:7:23
  |
7 | use ndarray::{Array2, Axis};
  |                       ^^^^

warning: unused import: `build_ohlcv`
  --> crates\forex-bindings\src\data.rs:15:5
   |
15 |     build_ohlcv, parse_feature_profile, resolve_base_tf, vec_from_py_i64, vec_from_py_f64,
   |     ^^^^^^^^^^^

warning: unused imports: `IntoPyArray`, `PyArray1`, `PyArray2`, and `PyReadonlyArray2`
 --> crates\forex-bindings\src\search.rs:1:13
  |
1 | use numpy::{IntoPyArray, PyArray1, PyArray2, PyReadonlyArray1, PyReadonlyArray2};
  |             ^^^^^^^^^^^  ^^^^^^^^  ^^^^^^^^                    ^^^^^^^^^^^^^^^^

warning: unused import: `PyArray2`
 --> crates\forex-bindings\src\evaluation.rs:1:36
  |
1 | use numpy::{IntoPyArray, PyArray1, PyArray2, PyReadonlyArray1, PyReadonlyArray2};
  |                                    ^^^^^^^^

warning: unused imports: `SearchResult`, `fast_evaluate_strategy_core`, `month_day_indices`, and `signals_for_gene`
  --> crates\forex-bindings\src\evaluation.rs:9:21
   |
 9 |     evaluate_genes, signals_for_gene, fast_evaluate_strategy_core,
   |                     ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |     Gene, EvaluationConfig, SearchResult, month_day_indices,
   |                             ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

error[E0277]: `*mut pyo3::Python<'static>` cannot be shared between threads safely
   --> crates\forex-bindings\src\evaluation.rs:318:31
    |
318 |       let frame_res = py.detach(|| {
    |  ________________________------_^
    | |                        |
    | |                        required by a bound introduced by this call
319 | |        let data: PyReadonlyArray2<f32> = features.getattr(py, "data")?.extract(py)?;
320 | |        let names: Vec<String> = features.getattr(py, "names")?.extract(py)?;
321 | |        let timestamps: PyReadonlyArray1<i64> = features.getattr(py, "timestamps")?.extract(py)?;
...   |
326 | |        })
327 | |     })?;
    | |_____^ `*mut pyo3::Python<'static>` cannot be shared between threads safely
    |
    = help: within `pyo3::Python<'_>`, the trait `Sync` is not implemented for `*mut pyo3::Python<'static>`
note: required because it appears within the type `PhantomData<*mut pyo3::Python<'static>>`
   --> C:\Users\konst\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\marker.rs:819:12
    |
819 | pub struct PhantomData<T: PointeeSized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `pyo3::marker::NotSend`
   --> C:\Users\konst\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\pyo3-0.28.2\src\marker.rs:357:8
    |
357 | struct NotSend(PhantomData<*mut Python<'static>>);
    |        ^^^^^^^
note: required because it appears within the type `PhantomData<pyo3::marker::NotSend>`
   --> C:\Users\konst\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\marker.rs:819:12
    |
819 | pub struct PhantomData<T: PointeeSized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `pyo3::Python<'_>`
   --> C:\Users\konst\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\pyo3-0.28.2\src\marker.rs:353:12
    |
353 | pub struct Python<'py>(PhantomData<&'py AttachGuard>, PhantomData<NotSend>);
    |            ^^^^^^
    = note: required for `&pyo3::Python<'_>` to implement `Send`
note: required because it's used within this closure
   --> crates\forex-bindings\src\evaluation.rs:318:31
    |
318 |     let frame_res = py.detach(|| {
    |                               ^^
    = note: required for `{closure@crates\forex-bindings\src\evaluation.rs:318:31: 318:33}` to implement `Ungil`
note: required by a bound in `pyo3::Python::<'py>::detach`
   --> C:\Users\konst\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\pyo3-0.28.2\src\marker.rs:560:12
    |
558 |     pub fn detach<T, F>(self, f: F) -> T
    |            ------ required by a bound in this associated function
559 |     where
560 |         F: Ungil + FnOnce() -> T,
    |            ^^^^^ required by this bound in `Python::<'py>::detach`

warning: unused import: `polars::prelude`
 --> crates\forex-bindings\src\evaluation.rs:2:5
  |
2 | use polars::prelude::*;
  |     ^^^^^^^^^^^^^^^

warning: unused variable: `timestamps`
   --> crates\forex-bindings\src\evaluation.rs:512:5
    |
512 |     timestamps: Option<PyReadonlyArray1<'py, i64>>,
    |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_timestamps`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `journal_df`
   --> crates\forex-bindings\src\evaluation.rs:546:42
    |
546 | pub fn trade_journal_metrics(py: Python, journal_df: Py<PyAny>) -> PyResult<Py<PyAny>> {
    |                                          ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_journal_df`

warning: unused variable: `open`
   --> crates\forex-bindings\src\evaluation.rs:559:5
    |
559 |     open: PyReadonlyArray1<f64>,
    |     ^^^^ help: if this is intentional, prefix it with an underscore: `_open`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `forex-bindings` (lib) due to 1 previous error; 21 warnings emitted
